# Coin-proto

./: .README.md.swp  Main.py  README.md  pyproject.toml  upbit test .ipynb
pages/: .1_Cash_balance.py.swp  1_Cash_balance.py  2_Tickers.py
src/coin_proto/: .where_now.py.swp  db.py  where_now.py
tests/: .test_coin.py.swp  test_coin.py
